--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: John, Doe
+name: KwonNaeHyeon
 
 # Short bio or description (displayed in the header)
-description: Dolore non veniam ex pariatur est.
+description: 공학작문및발표를 위한 무언가
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar:
@@ -23,7 +23,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github:
+  github: KwonNaeHyeon
   instagram:
   linkedin:
   pinterest:
