fix : 5주차 과제 파일

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: KwonNaeHyeon
 
 # Short bio or description (displayed in the header)
-description: 공학작문및발표를 위한 무언가
+description: 공학작문및발표 2023.ver
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar:
